# internal/infra/webservice/handlers/user_handlers.go
@@ -5,9 +5,7 @@ import (
 	"github.com/go-chi/jwtauth"
 	"github.com/raul-franca/go-fc-apis/internal/dto"
 	"github.com/raul-franca/go-fc-apis/internal/entity"
-	_ "github.com/raul-franca/go-fc-apis/internal/entity"
 	"github.com/raul-franca/go-fc-apis/internal/infra/database"
-	_ "gorm.io/gorm"
 	"net/http"
 	"time"
 )
@@ -24,6 +22,17 @@ type Error struct {
 	Message string `json:"message"`
 }
 
+// GetJWT godoc
+// @Summary      Get a user jwt
+// @Description  Get a user jwt
+// @Tags         users
+// @Accept       json
+// @Produce      json
+// @Param        request   body     dto.GetJWTInput  true  "user credentials"
+// @Success      200	{object}	dto.GetJWTOutput
+// @Failure      404
+// @Failure      500         {object}  Error
+// @Router       /users/generate_token [post]
 func (h *UserHandler) GetJWT(w http.ResponseWriter, r *http.Request) {
 	jwt := r.Context().Value("jwt").(*jwtauth.JWTAuth)
 	jwtExpiresIn := r.Context().Value("JwtExperesIn").(int)
@@ -37,6 +46,7 @@ func (h *UserHandler) GetJWT(w http.ResponseWriter, r *http.Request) {
 	}
 	u, err := h.UserDB.FindByEmail(user.Email)
 	if err != nil {
+
 		w.WriteHeader(http.StatusNotFound)
 		err := Error{Message: err.Error()}
 		json.NewEncoder(w).Encode(err)
@@ -57,6 +67,16 @@ func (h *UserHandler) GetJWT(w http.ResponseWriter, r *http.Request) {
 	json.NewEncoder(w).Encode(accessToken)
 }
 
+// Create user godoc
+// @Summary      Create user
+// @Description  Create user
+// @Tags         users
+// @Accept       json
+// @Produce      json
+// @Param        request     body      dto.CreateUserInput  true  "user request"
+// @Success      201
+// @Failure      500         {object}  Error
+// @Router       /users [post]
 func (h *UserHandler) Create(w http.ResponseWriter, r *http.Request) {
 	var user dto.CreateUserInput
 	err := json.NewDecoder(r.Body).Decode(&user)
